--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
         document.write("<br>")
 
 
-        lotr = ["Mordor","Gondor","Rohan","Beleriand","Mirkwood","Dead Marshes","Rhun","Harad"]
-        var LOTRcomplete = (lotr.splice(0,2).concat(1,5)
-        JSON.stringify(LOTRcomplete)
-        document.write(LORTsplice)
+        // lotr = ["Mordor","Gondor","Rohan","Beleriand","Mirkwood","Dead Marshes","Rhun","Harad"]
+        // var LOTRcomplete = (lotr.splice(0,2).concat(1,5)
+        // JSON.stringify(LOTRcomplete)
+        // document.write(LORTsplice)
 
     </script>
 </body>
